--- a/src/views/components/works/index.scss
+++ b/src/views/components/works/index.scss
@@ -1,17 +1,16 @@
-.works{
-    background-color: crimson ;
+.works {
+    background-color: crimson;
     display: flex;
     align-items: center;
     justify-content: center;
 
-    .silder {
+    .slider {
         height: 350px;
         display: flex;
         position: absolute;
         left: 0;
 
         .container {
-            width: 100vw;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -31,6 +30,27 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
+
+                    .leftContainer {
+                        width: 90%;
+                        height: 70%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+
+                        .imgContainer {
+                            width: 40px;
+                            height: 40px;
+                            border-radius: 50%;
+                            background-color: pink;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            img {
+                                width: 25px;
+                            }
+                        }
+                    }
                 }
                 .right {
                     flex: 8;
@@ -39,8 +59,6 @@
                     align-items: center;
                     justify-content: center;
                 }
-
-
             }
         }
     }
